Fixed contact on iPhone6

--- a/client/scss/components/_contact.scss
+++ b/client/scss/components/_contact.scss
@@ -290,7 +290,7 @@
     }
 }
 
-@media (min-height: 5.5px) and (min-width: 0px) and (max-width: 350px) and (max-height: 610px) and (orientation: portrait) {
+@media (min-height: 5.5px) and (min-width: 0px) and (max-width: 376px) and (max-height: 560px) and (orientation: portrait) {
     #page-container article header.main div.contact {
         @include grid-row(24);
         > div {
